@startuml
'https://plantuml.com/class-diagram


interface TspFactory
interface TspVehicleBaseFindDataService
class TspTemplateFactory
class TspVehicleFindDataService

TspTemplateFactory ..|> TspFactory
TspVehicleBaseFindDataService ..> TspTemplateFactory
TspVehicleFindDataService ..|> TspVehicleBaseFindDataService


@enduml